--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url= 8.130.43.52:3000"> 
+<script type="text/javascript">window.location.href="http://8.130.43.52:3000/";</script>
